bug- fixed the bug of overlapping the chat

--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,14 @@
     height: 50px;
 }
 .container{
-    max-width: 50vw;
+    max-width: 100vw;
     background-color: rgb(184, 16, 16); 
     /* background-image: url(https://i.pinimg.com/736x/8c/98/99/8c98994518b575bfd8c949e91d20548b.jpg); */
     margin: auto;
     height: 100vh;
-    max-height: 60vh;
+    max-height: 80vh;
     overflow: scroll;
+    scroll-behavior: auto;
 
 }
 .msg{
